# newsletter-to-kindle

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  deploy.yml
docker/: Dockerfile  crontab  entrypoint.sh
scripts/: sanitize_eml.py
src/newsletter_kindle/: __main__.py  config.py  models.py  pipeline.py
src/newsletter_kindle/delivery/: base.py  kindle_sender.py
src/newsletter_kindle/epub/: builder.py  cover.py  style.css
src/newsletter_kindle/notify/: logging_config.py  notifier.py
src/newsletter_kindle/parsers/: base.py  tldr_parser.py
src/newsletter_kindle/sources/: base.py  imap_source.py
src/newsletter_kindle/state/: db.py
src/newsletter_kindle/validation/: epub_validator.py
tests/: conftest.py  test_bounce_reconciler.py  test_config.py  test_cover.py  test_epub_builder.py  test_epub_validator.py  test_extensibility.py  test_kindle_sender.py  test_notifier.py  test_pipeline.py  test_state_db.py  test_tldr_parser.py
tests/fixtures/bounces/: amazon_conversion_failed.eml
tests/fixtures/tldr/: 2024-01-15.eml  LICENSE.md
