[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletter-kindle"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "imap-tools>=1.13.0",
    "Pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-beautifulsoup4",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=newsletter_kindle --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["src/newsletter_kindle"]
omit = [
    "*/tests/*",
    # CLI entrypoint and pure integration modules — not unit-testable without live credentials
    "src/newsletter_kindle/__main__.py",
    "src/newsletter_kindle/pipeline.py",
    "src/newsletter_kindle/sources/imap_source.py",
]
